@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
 # 22-Aug-2012
-#     Fix problem with log-opts being deleted and not there a second time round
+#     Fix daemon opts that depended on starting a logger
 
 module Jerbil
-  # version set to 1.0.16
-  Version = '1.0.16'
+  # version set to 1.0.17
+  Version = '1.0.17'
   # date set to 22-Aug-2012
   Version_Date = '22-Aug-2012'
-  #ident string set to: jerbil-1.0.16 22-Aug-2012
-  Ident = 'jerbil-1.0.16 22-Aug-2012'
+  #ident string set to: jerbil-1.0.17 22-Aug-2012
+  Ident = 'jerbil-1.0.17 22-Aug-2012'
 end
