@@ -1,5 +1,9 @@
 ==History
 
+[jerbil-1.0.17 22-Aug-2012]
+
+  Fix daemon opts that depended on starting a logger
+
 [jerbil-1.0.16 22-Aug-2012]
 
   Fix problem with log-opts being deleted and not there a second time round
